2007-02-15  Rafael Villar Burke  <pachi@rvburke.com>

	* pygtk2-gtkprintoperation.xml: Change variable name print with print_op
	as print is a reserved word in python

2006-10-11  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Remove Author info.

	* pygtk-introduction.xml: Remove Copyright and License section.

2006-08-22  Johan Dahlin  <jdahlin@async.com.br>

	* pygtk-gtkcontainer.xml (linkend): forall, spotted by 
	Tim Terlegård
	
2006-08-11  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaction.xml (set_menu_item_type, set_tool_item_type): Add.

	* pygtk-gtkwidget.xml (get_activate_signal): Add.

2006-08-06  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml
	* pygtk-gtkcontainer.xml: Replace gobject-*-constants xrefs with
	link tags.

2006-08-03  John Finlay  <finlay@moeraki.com>

	* pygtk-gtklinkbutton.xml: Remove extra Returns:
	* pygtk-gtkstatusicon.xml: Add missing "
	Fixes #349862 (Nikos Kouremenos)

2006-07-19  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Add version and builddate entities.

	* pygtk-introduction.xml: Update.

2006-07-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreeselection.xml (set_select_function): Update description
	for 2.10 changes to enable full callback args.

	* pygtk-gtkmenu.xml (popup): Note func signature prior to 2.10.

2006-07-14  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaccelmap.xml: Add.

	* pygtk-gtkaccelgroup.xml: Move accel map functions to
	pygtk-gtkaccelmap.xml

	* pygtk-gtk-classes.xml: Add pygtk-gtkaccelmap.xml

2006-07-12  John Finlay  <finlay@moeraki.com>

	* pygtk-unixprint-classes.xml: Add pygtk-unixprint-functions.xml.

	* pygtk-unixprint-functions.xml: Add gtk.unixprint.enumerate_printers.

	* pygtk-gtkprinter.xml (accepts_ps, accepts_pdf): Add.

2006-07-07  John Finlay  <finlay@moeraki.com>

	* pygtk-pangofontfamily.xml (is_monospace): Fix Returns description.
	#340108 (Wouter Bolsterlee)

	* pygtk-gtk-constants.xml (Selection Mode Constants): Add link