@@ -383,7 +383,13 @@ linkend="method-gdkpixbuf--rotate-simple">rotate_simple</link></methodname>
 	<methodparam><parameter
 		       role="keyword">angle</parameter></methodparam>
       </methodsynopsis>
-    </classsynopsis>
+      <methodsynopsis language="python">
+	<methodname><link
+linkend="method-gdkpixbuf--flip">flip</link></methodname>
+	<methodparam><parameter
+		       role="keyword">horizontal</parameter></methodparam>
+      </methodsynopsis>
+  </classsynopsis>
 
     <programlisting>
 <emphasis role="bold">Functions</emphasis>
@@ -2494,13 +2500,44 @@ with the original pixbuf, so writing to one affects both.</para>
       <para>The <methodname>rotate_simple</methodname>() method creates a
       new <link
       linkend="class-gdkpixbuf"><classname>gtk.gdk.Pixbuf</classname></link>
-      by roatating the given pixbuf by a multiple of 90 degrees as specified
+      by rotating the given pixbuf by a multiple of 90 degrees as specified
       by <parameter>angle</parameter> which is one of the <xref
       linkend="gdk-pixbuf-rotation-constants"
       endterm="gdk-pixbuf-rotation-constants-title"></xref></para>
 
     </refsect2>
-    
+
+    <refsect2 id="method-gdkpixbuf--flip">
+      <title>gtk.gdk.Pixbuf.flip</title>
+
+      <programlisting><methodsynopsis language="python">
+          <methodname>flip</methodname>
+          <methodparam><parameter role="keyword">horizontal</parameter></methodparam>
+        </methodsynopsis></programlisting>
+      <variablelist>
+        <varlistentry>
+          <term><parameter role="keyword">flip</parameter>&nbsp;:</term>
+          <listitem><simpara><literal>True</literal> to flip horizontally, <literal>False</literal> to
+            flip vertically</simpara></listitem>
+        </varlistentry>
+        <varlistentry>
+          <term><emphasis>Returns</emphasis>&nbsp;:</term>
+          <listitem><simpara>a new <link
+          linkend="class-gdkpixbuf"><classname>gtk.gdk.Pixbuf</classname></link></simpara></listitem>
+        </varlistentry>
+      </variablelist>
+
+      <note>
+        <para>This method is available in PyGTK 2.6 and above.</para>
+      </note>
+
+      <para>The <methodname>flip</methodname>() method creates a
+      new <link
+      linkend="class-gdkpixbuf"><classname>gtk.gdk.Pixbuf</classname></link>
+      by flipping the given pixbuf horizontally or vertically, as specified
+      by <parameter>horizontal</parameter>.</para>
+    </refsect2>
+
   </refsect1>
 
   <refsect1>
