@@ -1,3 +1,8 @@
+2007-02-27  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* pygtk-gdkpixbuf.xml: Add missing flip method documentation
+		Fix a typo s/roatate/rotate/
+
 2007-02-15  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* pygtk2-gtkprintoperation.xml: Change variable name print with print_op
